package profeDoc;

public enum TipoDato {
    INT,
    DOUBLE,
    BOOL,
    VOID;
}
